Update puppetControlVPC.sh